# sui-move-test-corpus

./: README.md  node-pairs-coverage.txt  node-pairs-zero-analysis.txt
account-framework/: README.md
account-registry/: README.md
aptos-analyzer/: Cargo.toml
aptos-analyzer/editors/code/: README.md
aptos-analyzer/tests/aptos-aave-v3/aave-core/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-acl/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-config/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-data/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-large-packages/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-math/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-oracle/: Move.toml
aptos-analyzer/tests/aptos-aave-v3/aave-core/aave-rate/: Move.toml
aptos-analyzer/tests/move-by-examples/advanced-todo-list/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/friend-tech/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/fungible-asset-launchpad/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/fungible-asset-voting/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/multidex-router/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/nft-launchpad/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/nft-marketplace/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/simple-todo-list/aptos/move/: Move.toml
aptos-analyzer/tests/move-by-examples/surf-for-type-safety/move/: Move.toml
aptos-analyzer/tests/move-by-examples/taxed-fungible-asset/move/: Move.toml
aptos-analyzer/tests/move-by-examples/telegram-boilerplate-template-with-mizu-core/move/: Move.toml
aptos-analyzer/tests/move-by-examples/telegram-boilerplate-template/move/: Move.toml
aptos-analyzer/tests/move-by-examples/telegram-boilerplate-template/move/sources/: module.move
aptos-analyzer/tests/symbols/: Move.toml
aptos-analyzer/tests/symbols/sources/: M1.move  enum.move  receiver_style_call2.move  receiver_style_call3.move
aptos-analyzer/tests/v1-core/Faucet/: Move.toml
aptos-analyzer/tests/v1-core/LPCoin/: Move.toml
aptos-analyzer/tests/v1-core/LPResourceAccount/: Move.toml
aptos-analyzer/tests/v1-core/Swap/: Move.toml
aptos-analyzer/tests/v1-core/TestCoin/: Move.toml
aptos-analyzer/tests/v1-core/u256/: Move.toml
aptos-analyzer/tests/v1-core/uq64x64/: Move.toml
buck-voucher/: Move.toml  README.md
bucket-framework/: Move.toml  README.md
bucket-periphery/: Move.toml  README.md
bucket-v1-core/: README.md
buckyou-contracts/: LICENSE  README.md
deeptrade-core/: LICENSE.md
dubhe-framework/: README.md
encryption-public-key/: README.md
external-projects/multisig_tic-tac-toe/rust-cli-client/: Cargo.toml
external-projects/mvr/crates/mvr-api/: Cargo.toml
external-projects/mvr/crates/mvr-schema/: Cargo.toml  README.md
external-projects/starcoin/simnet/: Cargo.toml
external-projects/starcoin/vm2/aggregator/: Cargo.toml
external-projects/starcoin/vm2/move-package-manager/: Cargo.toml
external-projects/starcoin/vm2/test-helper/: Cargo.toml
external-projects/starcoin/vm2/vm-status-translator/: Cargo.toml
external-projects/sui-prover/crates/lambda-boogie-handler/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.aws  Dockerfile.boogie-runner  build-ecr.sh  handler.rs  lambda.rs  local.sh  sample.env
external-projects/sui-prover/crates/move-prover-boogie-backend/: CLAUDE.md  Cargo.toml
external-projects/sui-prover/crates/move-prover-boogie-backend/src/: generator.rs  generator_options.rs  lib.rs
external-projects/sui-prover/crates/move-prover-boogie-backend/src/boogie_backend/: boogie_helpers.rs  boogie_wrapper.rs  bytecode_translator.rs  lib.rs  mod.rs  options.rs  runner.rs  spec_translator.rs
external-projects/sui-prover/crates/move-prover-boogie-backend/src/boogie_backend/prelude/: native.bpl  prelude.bpl
iota-full/: .typos.toml
iota-full-extra/: Cargo.toml
mvr-extra/: Cargo.toml
mvr-extra/app/: README.md
mvr-extra/crates/ci-tests/tests/cases/dependencies/unsupported-network-with-env/: initial.toml
mvr-extra/crates/mvr-cli/: Cargo.toml
mvr-extra/crates/mvr-indexer/: Cargo.toml
mvr-extra/scripts/: README.md
onenet-bushi/: README.md
oz-contracts-full/: README.md
starcoin-extra/cmd/miner_client/: Cargo.toml
starcoin-extra/stratum/: Cargo.toml
starcoin-extra/vm2/framework/: Cargo.toml
starcoin-extra/vm2/framework/gas-algebra/: Cargo.toml
starcoin-extra/vm2/framework/gas-meter/: Cargo.toml
starcoin-extra/vm2/framework/table-natives/: Cargo.toml
starcoin-extra/vm2/package-builder/: Cargo.toml
starcoin-extra/vm2/starcoin-transactional-test-harness/: Cargo.toml
starcoin-full/commons/mvhashmap/: Cargo.toml
starcoin-full/vm2/framework/gas-schedule/: Cargo.toml
starcoin-full/vm2/resource-viewer/: Cargo.toml
starcoin-v2/: Cargo.toml
starcoin-v2/vm2/types/: Cargo.toml
starcoin-v2/vm2/vm-types/: Cargo.toml
walrus-core/: Cargo.toml  deny.toml
walrus-core/contracts/subsidies/: Move.toml
walrus-core/contracts/subsidies/sources/: subsidies.move
walrus-core/contracts/walrus/sources/: init.move  slashing.move  staking.move  system.move
walrus-core/contracts/walrus/sources/staking/: staking_pool.move
walrus-core/contracts/walrus/sources/system/: system_state_inner.move
walrus-core/contracts/walrus/tests/staking/: staking_inner_tests.move
walrus-core/crates/walrus-performance-tests/: Cargo.toml
walrus-core/crates/walrus-proxy/: Cargo.toml
walrus-core/crates/walrus-storage-node-client/: Cargo.toml
walrus-core/crates/walrus-sui/: Cargo.toml
walrus-core/docker/walrus-antithesis/: sui_version.toml
walrus-core/docs/: README.md
walrus-core/docs/examples/javascript/: README.md
walrus-core/docs/site/static/setup/: client_config.yaml  client_config_testnet.yaml  walrus-install.sh
walrus-core/scripts/simtest/simtest_initialization/: Move.toml
walrus-core/testnet-contracts/walrus/: Move.toml
walrus-v2/crates/walrus-indexer/: Cargo.toml
(+1477 files in other folders)
