[workspace]
resolver = "2"

members = [
    "crates/mvr-cli",
    "crates/mvr-indexer",
    "crates/mvr-schema",
    "crates/mvr-types",
    "crates/mvr-api",
    "crates/ci-tests"
]

[workspace.dependencies]
tokio = "1.49.0"
serde = "1.0.228"
serde_json = "1.0.145"
dotenvy = "0.15.7"
chrono = { version = "=0.4.42", features = ["clock", "serde"] }
diesel = "2.2.7"
diesel-async = "0.5.2"
diesel_migrations = "2.2.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
once_cell = "1.20.3"
tracing = "0.1.41"
clap = "4.5.48"
async-trait = "0.1.89"
bcs = "0.1.6"
url = "2.5.7"
prometheus = "0.13.4"
tokio-util = "0.7.16"
futures = "0.3.31"
tempfile = "3.20.0"

# Main Sui Mono-repo
sui-indexer-alt-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-rpc-api = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8"}
jsonrpc = { git = "https://github.com/mystenlabs/sui.git", rev = "0b653b5485fb62c552c63df9b0012db388df99b8" }

# New Rust SDK
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk", package = "sui-sdk-types", rev = "c9105cd4028ae4dc5de4c612d25f4d476358a4b2", features = ["hash", "serde"] }

# async-graphql (use same fork as sui to avoid version conflicts)
async-graphql = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4", features = ["dataloader"] }

insta = "1.43.2"
