[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
tokio = { features = ["full"], workspace = true }
tokio-util = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-miner = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-types = { workspace = true }

[dev-dependencies]
stest = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
once_cell = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
name = "starcoin-stratum"
version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
