[package]
name = "rust-cli-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-core-types = { git = "https://github.com/MystenLabs/sui", subfolder = "external-crates/move/move-core/types", branch = "main" } 
shared-crypto = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
sui-keys = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
sui-sdk = { git = "https://github.com/MystenLabs/sui", branch = "main" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui", branch = "main" } 
sui-types = { git = "https://github.com/MystenLabs/sui", branch = "main" } 

anyhow = "1.0.75"
async-recursion = "1.0.4"
bcs = "0.1.5"
clap = "4.4.6"
dirs = "5.0.1"
dotenvy = "0.15.7"
fastcrypto = "0.1.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = "1.32.0"
