[package]
name = "mvr"
version = "0.1.0"
edition = "2021"
description = "MVR is a command line tool to interact with the Move Registry for the Sui network."
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]

[[bin]]
name = "mvr"
path = "src/main.rs"

[lib]
name = "mvr"
path = "src/lib.rs"

[dependencies]
bin-version = { git = "https://github.com/mystenlabs/sui", package = "bin-version", rev = "3b96ab72dd5db2fb800837d6067bf45839178b62" }
jsonrpc.workspace = true

clap = { workspace = true, features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
toml_edit = "0.22"
regex = "1.11"
yansi = "1.0"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
# MVR Types
mvr-types = { path = "../mvr-types" }

# Rust SDK
sui-sdk-types = { workspace = true, features = ["serde"] }

[dev-dependencies]
expect-test = "1.5.0"
insta.workspace = true
