[package]
name = "mvr-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio.workspace = true
futures = "0.3.31"
sui-indexer-alt-framework.workspace = true
sui-rpc-api.workspace = true
move-binary-format.workspace = true
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
reqwest = { version = "^0.12", features = ["blocking", "json"] }

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde"], rev = "f0c8068" }

mvr-schema = { path = "../mvr-schema" }
mvr-types = { path = "../mvr-types" }

clap = { workspace = true, features = ["env"] }
itertools = "0.14.0"
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tracing.workspace = true
async-trait.workspace = true
bcs.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true

sui-pg-db.workspace = true
prometheus.workspace = true
sui-indexer-alt-metrics.workspace = true
sui-types.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true
tokio-util.workspace = true

[dev-dependencies]
sui-storage.workspace = true
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"]}
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
insta = { version = "1.43.1", features = ["json"] }

[[bin]]
name = "mvr-indexer"
path = "src/main.rs"

[[example]]
name = "download-checkpoint"
path = "examples/download_checkpoint.rs"

[[example]]
name = "immediate-dependency-backfill"
path = "examples/immediate_dependency_backfill.rs"
