[[bin]]
name = "starcoin_miner"
path = "src/main.rs"

[dependencies]
actix = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-crypto = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }


starcoin-logger = { workspace = true }
starcoin-config = { workspace = true }
starcoin-time-service = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
tokio = { features = ["full"], workspace = true }
tokio-util = { workspace = true }
byteorder = { workspace = true }
clap = { features = ["derive"], workspace = true }
dyn-clone = { workspace = true }
futures-timer = { workspace = true }
hex = { workspace = true }
libloading = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rust-argon2 = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
starcoin-miner = { workspace = true }
starcoin-miner-client-api = { workspace = true }
starcoin-rpc-api = { workspace = true }
starcoin-rpc-client = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-stratum = { workspace = true }
stest = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
starcoin-miner = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
name = "starcoin-miner-client"
version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
