[package]
name = "starcoin-framework"
description = "Starcoin stdlib"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
starcoin-aggregator = { path = "../aggregator" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
starcoin-gas-algebra = { path = "gas-algebra" }
starcoin-gas-schedule = { path = "gas-schedule" }
starcoin-move-stdlib = { path = "move-stdlib", package = "starcoin-move-stdlib" }
starcoin-native-interface = { path = "native-interface" }
starcoin-sdk-builder = { path = "../sdk-builder" }
starcoin-types = { path = "../types" }
starcoin-vm-types = { path = "../vm-types" }
starcoin-vm-runtime-types = { path = "../vm-runtime-types" }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bcs = { workspace = true }
better_any = { workspace = true }
blake2-rfc = { workspace = true }
bulletproofs = { workspace = true }
byteorder = { workspace = true }
clap = { features = ["derive"], workspace = true }
codespan-reporting = { workspace = true }
# We need `zkcrypto/curve25519-dalek-ng` here instead of the normal `dalek-cryptography/curve25519-dalek` package. This
# is because the `dalek-cryptography/bulletproofs` works with version 2 of `dalek-cryptography/curve25519-dalek` and
# we work with version 3. Instead, we use `zkcrypto/bulleproofs` which relies on `zkcrypto/curve25519-dalek-ng`.
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4" }
either = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
libsecp256k1 = { workspace = true }
log = { workspace = true }
merlin = { workspace = true }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-cli = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-compiler = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-docgen = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-model = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-package = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-prover = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-prover-boogie-backend = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-prover-bytecode-pipeline = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-stackless-bytecode = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_core_0_5_1 = { workspace = true }
ripemd = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
sha2_0_9 = { workspace = true }
sha3 = { workspace = true }
siphasher = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
quick_cache = { workspace = true }

[dev-dependencies]
starcoin-aggregator = { path = "../aggregator", features = ["testing"] }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
# starcoin-gas-meter = { workspace = true }
starcoin-vm-runtime = { path = "../vm-runtime", features = ["testing"] }
claims = { workspace = true }
move-cli = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-prover = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-unit-test = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }

[features]
default = ["testing"]
fuzzing = ["starcoin-types/fuzzing"]
testing = ["starcoin-move-stdlib/testing", "starcoin-crypto/fuzzing"]

[lib]
doctest = false

[package.metadata.cargo-machete]
ignored = ["starcoin-move-stdlib", "serde_bytes"]
