[[test]]
harness = false
name = "tests"

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
either = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
jsonrpc-client-transports = { features = [
    "http",
    "ipc",
    "ws",
    "arbitrary_precision",
], workspace = true }
jsonrpc-core-client = { features = [
    "http",
    "ipc",
    "ws",
    "arbitrary_precision",
], workspace = true }
log = { workspace = true }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-compiler = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-resource-viewer = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }

once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { features = ["full"], workspace = true }
bcs-ext = { workspace = true }
futures = { workspace = true }
jsonrpc-core = { features = ["arbitrary_precision"], workspace = true }
jsonrpc-http-server = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-dag = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-rpc-api = { workspace = true }
starcoin-rpc-server = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-state-tree = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-transaction-builder = { workspace = true }

# starcoin-vm2-storage = { workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
starcoin-vm2-rpc-api = { workspace = true }
starcoin-vm2-state-api = { workspace = true }
starcoin-vm2-crypto = { workspace = true }
starcoin-vm2-vm-runtime = { workspace = true }
starcoin-vm2-statedb = { workspace = true }
starcoin-vm2-rpc-server = { workspace = true }
starcoin-vm2-resource-viewer = { workspace = true }
starcoin-gas-schedule = { path = "../../vm2/framework/gas-schedule" }
starcoin-vm2-abi-decoder = { workspace = true }
starcoin-vm2-dev = { workspace = true }
starcoin-vm2-framework = { workspace = true }
starcoin-vm2-move-compiler = { workspace = true }
starcoin-vm2-cached-packages = { workspace = true }
starcoin-vm2-executor = { workspace = true }

[dev-dependencies]
datatest-stable = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-vm2-transactional-test-harness"
publish = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
