[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
serde = { features = ["derive", "rc"], workspace = true }
serde_json = { workspace = true }
starcoin-vm-types = { path = "../vm-types" }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-vm2-resource-viewer"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
