[dependencies]
anyhow = { workspace = true }
bcs-ext = { workspace = true }
bytes = { workspace = true }
forkable-jellyfish-merkle = { workspace = true }
hex = { features = ["serde"], workspace = true }
proptest = { features = ["std"], optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
starcoin-uint = { workspace = true }
starcoin-state-store-api = { workspace = true }
starcoin-vm2-vm-types = { path = "../vm-types", package = "starcoin-vm-types" }
starcoin-vm2-resource-viewer = { workspace = true }
starcoin-vm2-abi-decoder = { workspace = true }
starcoin-vm2-abi-types = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-bytecode-verifier = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
once_cell = { workspace = true }
serde_bytes = { workspace = true }
vm-status-translator = { path = "../vm-status-translator", package = "starcoin-status-translator" }

[dev-dependencies]
claims = { workspace = true }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-vm2-vm-types/fuzzing"]

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-types"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
