[dependencies]
anyhow = { workspace = true }
chrono = { default-features = false, features = ["clock"], workspace = true }
hex = { workspace = true }
log = { workspace = true }
sha3 = { workspace = true }

num_enum = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_bytes = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
move-bytecode-verifier = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-ir-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
proptest = { features = ["std"], optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }
starcoin-time-service = { workspace = true }
bcs-ext = { workspace = true }
starcoin-gas-algebra = { path = "../framework/gas-algebra" }

rustc-hash = { workspace = true }
forkable-jellyfish-merkle = { workspace = true }
schemars = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
starcoin-uint = { workspace = true }
vm = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243", package = "move-binary-format" }
bytes = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
bcs = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
hashbrown = { workspace = true }
arr_macro = { workspace = true }
starcoin-infallible = { workspace = true }


[dev-dependencies]
proptest = { workspace = true, features = ["std"] }
proptest-derive = { workspace = true }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588", features = ["fuzzing"] }
starcoin-gas-algebra = { path = "../framework/gas-algebra", features = ["testing"] }
vm = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243", package = "move-binary-format", features = ["fuzzing"] }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243", features = ["fuzzing"] }

[features]
default = []
fuzzing = [
    "proptest",
    "proptest-derive",
    "vm/fuzzing",
    "starcoin-crypto/fuzzing",
    "move-core-types/fuzzing",
]
print_gas_info = []

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-vm-types"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
