[package]
name = "walrus-indexer"
publish = false
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "walrus_indexer"
path = "src/lib.rs"

[dependencies]
# Core async/web/database dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
typed-store = { workspace = true }

# Walrus dependencies
walrus-core.workspace = true
walrus-sdk.workspace = true
walrus-service.workspace = true
walrus-sui.workspace = true
walrus-utils.workspace = true

# Sui dependencies
sui-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
walrus-test-utils = { workspace = true }
