[package]
name = "mvr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-package-resolver.workspace = true
async-graphql.workspace = true
axum = "0.8.1"
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
base64 = "0.22.1"

futures.workspace = true
serde = { workspace = true, features = ["derive"] }
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
bcs.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
sui-pg-db.workspace = true
prometheus.workspace = true
sui-indexer-alt-metrics.workspace = true
move-core-types.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tokio-util.workspace = true
sui-sdk-types = { workspace = true, features = ["serde"] }
mvr-types = { path = "../mvr-types" }
mvr-schema = { path = "../mvr-schema" }

[dev-dependencies]
sui-move-build.workspace = true
move-binary-format.workspace = true
reqwest = { version = "0.12.11", features = ["json"] }
insta.workspace = true

[[bin]]
name = "mvr-api"
path = "src/main.rs"
