[package]
name = "mvr-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-field-count.workspace = true
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
