[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-aggregator"
description = "Aggregator sources for the Starcoin blockchain"
publish = { workspace = true }
version = "2.0.1"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
bcs = { workspace = true }
claims = { workspace = true }
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "2a1550807cd28cdc04e3bf19576c9a2958864243" }


[dev-dependencies]
once_cell = { workspace = true }
test-case = { workspace = true }

[features]
default = []
testing = []

